# sssom-rosetta

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
.agents/: plan-protege-support.md  plan.md
.agents/design/: 2027-07-21-choice-of-backend.md
.agents/plan/: 2026-07-21-omophub-backend-reverse-engineering.md
.github/workflows/: pr-mapping-report.yml  publish-docs.yml
docs/: index.md
docs/mappings/: omop-onz-g.md
docs/ontologies/: omop-cdm.md
mappings/: contributors.csv  contributors.metadata.json  omop-onz-g-metadata.json  omop-onz-g.csv  omop-onz-g.metadata.json
notebooks/: omop.py
src/sssom_rosetta/: cli.py
src/sssom_rosetta/mapping/: io.py  protege.py  report.py
src/sssom_rosetta/ontology/: sources.py
src/sssom_rosetta/vocabulary/: namespaces.py
tests/: test_cli.py
tests/mapping/: test_first_mapping_set.py  test_io.py  test_protege.py  test_report.py
tests/ontology/: test_sources.py
tests/vocabulary/: test_omop.py
